--- a/PostService/appsettings.json
+++ b/PostService/appsettings.json
@@ -3,7 +3,7 @@
     "Instance": "https://login.microsoftonline.com/",
     "ClientId": "1ed5e9b3-09aa-4d83-a8dd-4060f1e0b32d",
     "TenantId": "51b500ed-4188-4de5-8778-335fa50483b3",
-    //"Audience": "1ed5e9b3-09aa-4d83-a8dd-4060f1e0b32d",
+    "Audience": "api://1ed5e9b3-09aa-4d83-a8dd-4060f1e0b32d"
     //"ClientSecret": "upB8Q~RncORdyTfcpyMaZ8SfjhSvWlDJpiik0atu"
   },
   "Logging": {
