--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommentService\CommentService.csproj" />
     <ProjectReference Include="..\PostService\PostService.csproj" />
   </ItemGroup>
 
