connection string change

--- a/CommentService/appsettings.json
+++ b/CommentService/appsettings.json
@@ -12,7 +12,8 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-    "DefaultConnnection": "Data source=DESKTOP-VMOPBU9\\MSSQLSERVERS; Initial Catalog=BlogManagement; User Id=sa; Password=icliq@111;Trusted_Connection=True;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    //"DefaultConnnection": "Data source=DESKTOP-VMOPBU9\\MSSQLSERVERS; Initial Catalog=BlogManagement; User Id=sa; Password=icliq@111;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnnection": "Server=tcp:sqldbdesktop.database.windows.net,1433;Initial Catalog=BlogManagement;Persist Security Info=False;User ID=sk900;Password=sqlserver@111;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
